force-app/main/default/objects/Association_Organisation__c/Association_Organisation__c.object-meta.xml
<CustomObject>
    <label>Association Overview</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Association Overview ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Association Overviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>