force-app/main/default/objects/Association_Organisation__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association Name</label>
    <referenceTo>Association__c</referenceTo>
    <relationshipName>Association_Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>