force-app/main/default/objects/Association_Organisation__c/fields/CCS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>CCS_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCS Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Association Overviews</relationshipLabel>
    <relationshipName>Association_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>