force-app/main/default/objects/Association_Organisation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Association Overviews</relationshipLabel>
    <relationshipName>Association_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>