force-app/main/default/objects/Association_Organisation__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation</label>
    <type>Text</type>
</CustomField>