force-app/main/default/objects/Association_Organisation__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone</label>
    <type>Text</type>
</CustomField>